# otterwiki

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  BUILD_RUST.md  CHANGELOG.md  Cargo.toml  DATABASE_SETUP.md  Dockerfile  Dockerfile.rust  INDEX.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Makefile.rust  PYTHON_VS_RUST.md  QUICKSTART.md  README.md  README_RUST.md  RUST_REWRITE_SUMMARY.md  SECURITY.md  docker-compose.override.yml  docker-compose.override.yml.skeleton  docker-compose.prod.yml  docker-compose.rust.yml  docker-compose.yml  docker-entrypoint.sh  esbuild.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  run_local.ps1  run_local.sh  settings.cfg.skeleton  (+6 more)
cm6-src/: editor-formatting.js  editor-links.js  editor-lists.js  editor-tables.js  helpers.js  index.js  inline-attachment.js  languages.js  list-depth.js  state-detection.js  syntax_embedding.js  theme.js
docker/: Dockerfile.slim  entrypoint-slim.sh  entrypoint.sh  nginx.conf  stop-supervisor.sh  supervisord.conf  uwsgi-slim.ini  uwsgi.ini  uwsgi.prod.ini
docs/auth_examples/header-auth/: Caddyfile  Makefile  README.md  docker-compose.yaml
docs/auth_examples/header-auth-different-headers/: Caddyfile  README.md  docker-compose.yaml
docs/auth_examples/ldap-auth/: Makefile  README.md  compose.yaml
docs/custom_css_example/: README.md  docker-compose.yaml
docs/custom_css_example/custom/: custom.css
docs/custom_html_example/: README.md  docker-compose.yaml
docs/custom_html_example/custom/: custom.css  custom.js  customBody.html  customHead.html
docs/plugin_examples/: README.md  docker-compose.yaml
docs/plugin_examples/plugin_authorsignature/: otterwiki_authorsignature.py  pyproject.toml
docs/plugin_examples/plugin_htmlinjection/: otterwiki_htmlinjection.py  pyproject.toml
docs/plugin_examples/plugin_noemojis/: otterwiki_noemojis.py  pyproject.toml
docs/plugin_examples/plugin_redlinks/: otterwiki_redlinks.py  pyproject.toml
docs/plugin_examples/plugin_referencingpages/: otterwiki_referencingpages.py  pyproject.toml
docs/plugin_examples/plugin_sidebarpageindex/: otterwiki_sidebarpageindex.py  pyproject.toml
docs/plugin_examples/plugin_updatelinksonrename/: otterwiki_updatelinksonrename.py  pyproject.toml
docs/plugin_examples/tests/: conftest.py  test_noemojis.py  test_redlinks.py  test_referencingpages.py
frontend/: esbuild.config.mjs  package-lock.json  package.json
frontend/src/: index.js  inline-attachment.js  syntax_wikilink.js
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
helm/templates/tests/: test-connection.yaml
migrations/: 20240101000000_initial.sql
nginx/: Dockerfile  certbot-renew.sh  default-ssl.conf
otterwiki/: __init__.py  about.md  auth.py  backlinks.py  cli.py  default_settings.py  formatter.py  gitstorage.py  help.md  help_admin.md  helper.py  initial_custom_css.css  initial_home.md  models.py  otterwiki_plugins.py  pageindex.py  pluginmgmt.py  plugins.py  preferences.py  profiler.py  remote.py  renderer.py  renderer_embeddings.py  renderer_plugins.py  repomgmt.py  security_check.py  server.py  sidebar.py  sitemap.py  statistics.py  storage.py  tools.py  util.py  uwsgi.ini  version.py  views.py  wiki.py
otterwiki/static/: .gitattributes
otterwiki/static/css/: .gitattributes  codemirror-dialog.css  codemirror-theme.css  codemirror.css  layout.css  otterwiki.css  print.css  pygments-print.css  pygments.css  roboto.css  simple-datatables@10.2.0.css  simple-datatables@10.2.0.print.css  style.css
otterwiki/static/custom/: custom.css  custom.js
otterwiki/static/img/: otter-favicon.xcf  otter-favicon2.xcf  otter.xcf  otterhead-up.xcf  otterhead.xcf  preview.xcf
otterwiki/static/js/: .gitattributes  Sortable.js  cm-continuelist.js  cm-mode-css.js  cm-modes.js  cm-modes.min.js  cm6-bundle.min.js  codemirror.min.js  halfmoon.js  halfmoon.min.js  htmx.2.0.6.min.js  inline-attachment.js  mermaid@11.12.3.min.js  mermaid@11.4.1.min.js  otterwiki.js  polyfill.e6.min.js  polyfill.min.js  simple-datatables@10.2.0.js  simple-datatables@10.2.0.min.js  ui.js
otterwiki/static/mathjax/: loader.js  mml-chtml-nofont.js  mml-chtml.js  mml-svg-nofont.js  mml-svg.js  (+5 more)
otterwiki/templates/: _syntax.html  about.html  admin.html  admin_notification.txt  approvement_notification.txt  attachments.html  blame.html  changelog.html  confirm_email.txt  create.html  delete.html  diff.html  draft.html  edit_attachment.html  editor.html  editor6.html  example.html  example_render.html  form.html  global_toc.html  help.html  help_syntax.html  history.html  layout.html  log.html  login.html  lost_password.html  page.html  page404.html  pageindex.html  pagenotfound.html  preview.html  recover_password.txt  register.html  register.txt  rename.html  revert.html  search.html  settings.html  source.html  (+4 more)
proxmox/: README.md  setup-otterwiki-lxc.sh
src/: auth.rs  config.rs  db.rs  error.rs  git_storage.rs  main.rs  markdown.rs  models.rs  state.rs  utils.rs
src/handlers/: admin.rs  auth.rs  mod.rs  static_files.rs  wiki.rs
src/templates/: base.rs
templates/: base.html
tests/: conftest.py  example.md  test_attachments.py  test_auth.py  test_auth_proxy_header.py  test_backlinks.py  test_cli.py  test_csrf.py  test_custom_html.py  test_draft.py  test_editor.py  test_email.py  test_embeddings.py  test_essentials.py  test_feed.py  test_gitstorage.py  test_help.py  test_helper.py  test_history.py  test_home_page.py  test_housekeeping.py  test_invalid_request_handling.py  test_otterwiki.py  test_page_lifecycle_hooks.py  test_pageindex.py  test_plugin_referencingpages.py  test_plugin_updatelinksonrename.py  test_preferences.py  test_preview.py  test_remote.py  test_rename_with_updated_links.py  test_renderer.py  test_repository_management.py  test_revision_injection.py  test_security_headers.py  test_seo.py  test_settings.py  test_sidebar.py  test_sitemap.py  test_storage.py  (+1 more)
(+33 files in other folders)
