[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otterwiki_referencingpages"
description = "An example plugin for An Otter Wiki that displays which pages reference the current page via WikiLinks."
version = "0.1.0"
authors = [
    { name = "deseven", email = "git@d7.wtf" }
]

[project.entry-points.otterwiki]
referencingpages = "otterwiki_referencingpages"
